tests/ui/fail/trait_assoc_item.stderr
error: #[extern_trait] may only contain methods
 --> tests/ui/fail/trait_assoc_item.rs:5:5
  |
5 |     type Output;
  |     ^^^^^^^^^^^^
